Add motors, Create Storage integration, Ponder scenes, documentation update
- Creative Logic Motor: CC-controlled rotation source (16 Lua functions)
- Logic Motor: CC-controlled rotation modifier with directional markers (17 functions)
  - Orange stripe = drive input, light blue = CC output
  - Debounced kinematics to prevent block popping from rapid Lua calls
- Create Storage soft dependency: storage_controller (14) + storage_interface (10)
- Ponder scenes and schematics for all 5 blocks (12 tags, 5 scenes)
- mainThread=true on all 86 @LuaFunction methods across 9 peripherals
- Updated README.md and MOD_DOCUMENTATION.md with full API reference

--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,10 @@ dependencies {
     compileOnly("cc.tweaked:cc-tweaked-${minecraft_version}-forge-api:${cc_tweaked_version}")
     // Full CC:Tweaked for runtime testing
     localRuntime("cc.tweaked:cc-tweaked-${minecraft_version}-forge:${cc_tweaked_version}")
+
+    // ==================== Create Storage (optional) ====================
+    // Compile against Create Storage for peripheral integration
+    compileOnly(files("libs/fxntstorage-1.1.7+mc-1.21.1-neoforge.jar"))
 }
 
 // Expand properties into resource templates (neoforge.mods.toml etc.)
