Fix book visibility, add recipe, fix Train Monitor inventory model
- Add Patchouli 1.21.1-92-NEOFORGE as compileOnly dependency
- Manually add guide book to creative tab via PatchouliAPI (bypasses
  Patchouli's NeoForge timing issue where processCreativeTabs fires
  before BookRegistry.init)
- Add shapeless book recipe: Book + Brass Ingot = Guide Book
  (uses patchouli:shapeless_book_recipe type)
- Fix Train Monitor item model: replace block model parent with
  minecraft:block/cube for proper display transforms in inventory/hand

--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,10 @@ dependencies {
     // Full CC:Tweaked for runtime testing
     localRuntime("cc.tweaked:cc-tweaked-${minecraft_version}-forge:${cc_tweaked_version}")
 
+    // ==================== Patchouli (optional) ====================
+    // Compile against Patchouli API for guide book integration
+    compileOnly("vazkii.patchouli:Patchouli:1.21.1-92-NEOFORGE")
+
     // ==================== Create Storage (optional) ====================
     // Compile against Create Storage for peripheral integration
     compileOnly(files("libs/fxntstorage-1.1.7+mc-1.21.1-neoforge.jar"))
