Add CTC integration: Logic Remote item, Contraption Remote block, textures & models
- Logic Remote item: handheld controller that links to CTC lectern + drives/motors
- Contraption Remote block: placeable version with same functionality
- ContraptionRemotePeripheral: CC:Tweaked peripheral type 'contraption_remote'
- TweakedControllerCompat: soft dependency detection for CTC
- TweakedControllerReader: isolated CTC class access for controller input
- Textures: logic_remote (CTC controller), contraption_remote front/side
- Models/blockstates for both items
- Lang entries for names and tooltips
- build.gradle: CTC as compileOnly dependency
- neoforge.mods.toml: optional CTC dependency

--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,10 @@ dependencies {
     // ==================== Create Storage (optional) ====================
     // Compile against Create Storage for peripheral integration
     compileOnly(files("libs/fxntstorage-1.1.7+mc-1.21.1-neoforge.jar"))
+
+    // ==================== Create: Tweaked Controllers (optional) ====================
+    // Compile against CTC for controller integration (remote drive/motor control)
+    compileOnly(files("libs/CreateTweakedControllers-1.21.1-1.3.0.jar"))
 }
 
 // Expand properties into resource templates (neoforge.mods.toml etc.)
