--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -57,3 +57,12 @@ description='''${mod_description}'''
     versionRange="[1.1.0,)"
     ordering="AFTER"
     side="BOTH"
+
+# Create: Tweaked Controllers - optional (enables remote controller integration)
+[[dependencies.${mod_id}]]
+    modId="create_tweaked_controllers"
+    type="optional"
+    reason="Enables Logic Remote to read gamepad/joystick input from Tweaked Controller lecterns"
+    versionRange="[1.3.0,)"
+    ordering="AFTER"
+    side="BOTH"
